Spacebar feature added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="button" class="btns" value="RESET" onclick="reset();">
     </div>
 
+    <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="js/timer.js"></script>
+    <script type="text/javascript" src="js/desktopUse.js"></script>
 </body>
 </html>
