--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Stopwatch</title>
+
+    <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 <body onload="show();">
     <h1 id="time"></h1>
+
     <div>
         <input type="button" class="btns" value="START" onclick="start();">
         <input type="button" class="btns" value="STOP" onclick="stop();">
