--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     <div id="timeinspection">
         <h3 id="drpdwnTitle">Set time inspection</h3>
         <div id="content">
-            <input type="button" class="contentBtns" value="3 seconds">
-            <input type="button" class="contentBtns" value="5 seconds">
-            <input type="button" class="contentBtns" value="10 seconds">
-            <input type="button" class="contentBtns" value="15 seconds">
+            <button class="contentBtns"> 3 seconds</button>
+            <button class="contentBtns">5 seconds</button>
+            <button class="contentBtns">10 seconds</button>
+            <button class="contentBtns">15 seconds</button>
         </div>
+        <h2 id="countdown"></h2>        
     </div>
 
     <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="js/timer.js"></script>
     <script type="text/javascript" src="js/desktopUse.js"></script>
+    <script type="text/javascript" src="js/timeinspect.js"></script>
 </body>
 </html>
