Works on mobile phones

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <script type="text/javascript" src="js/timer.js"></script>
     <script type="text/javascript" src="js/desktopUse.js"></script>
     <script type="text/javascript" src="js/timeinspect.js"></script>
+    <script type="text/javascript" src="js/phoneUse.js"></script>
 </body>
 </html>
