Cleaned css directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Stopwatch</title>
 
-    <link type="text/css" rel="stylesheet" href="css/main.css">
+    <link type="text/css" rel="stylesheet" href="css//dist/main.min.css">
 </head>
 <body onload="show();">
     <h1 id="time"></h1>
