--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <input type="button" class="btns" value="STOP" onclick="stop();">
         <input type="button" class="btns" value="RESET" onclick="reset();">
     </div>
+    
+    <p>Thank you</p>
 
     <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="js/timer.js"></script>
